k8s/envoy/demo-comm-envoy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.30-latest
          imagePullPolicy: IfNotPresent
          env:
            - name: TZ
              value: Asia/Ho_Chi_Minh
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/envoy/envoy.yaml
              subPath: envoy/envoy.yaml
              name: demo-comm-vol
#            - mountPath: /mnt/data
#              name: demo-comm-vol
      volumes:
        - name: demo-comm-vol
          persistentVolumeClaim:
            claimName: demo-comm-pvc
