k8s/envoy/demo-comm-envoy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo-communication
  name: demo-comm-web-grpc-svc
  labels:
    app: demo-comm-web-grpc-svc
spec:
  selector:
    app: demo-comm-web-con
  ports:
    - name: grpc
      protocol: TCP
      port: 19090
      targetPort: 19090
  type: ClusterIP
  sessionAffinity: None

#---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  namespace: demo-communication
#  name: envoy-config
#  labels:
#    app: envoy-config
#data:
#  envoy.yaml: |
#    static_resources:
#      listeners:
#        - name: listener_0
#          address:
#            socket_address:
#              address: 0.0.0.0
#              port_value: 8080
#          filter_chains:
#            - filters:
#                - name: envoy.filters.network.http_connection_manager
#                  typed_config:
#                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
#                    codec_type: AUTO
#                    stat_prefix: ingress_http
#                    route_config:
#                      name: local_route
#                      virtual_hosts:
#                        - name: local_service
#                          domains: ["*"]
#                          routes:
#                            - match: { prefix: "/" }
#                              route: { cluster: grpc_service }
#                    http_filters:
#                      - name: envoy.filters.http.router
#      clusters:
#        - name: grpc_service
#          connect_timeout: 0.25s
#          type: STRICT_DNS
#          lb_policy: ROUND_ROBIN
#          http2_protocol_options: {}
#          load_assignment:
#            cluster_name: grpc_service
#            endpoints:
#              - lb_endpoints:
#                  - endpoint:
#                      address:
#                        socket_address:
#                          address: grpc-server.default.svc.cluster.local
#                          port_value: 19090

#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: envoy
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: envoy
#  template:
#    metadata:
#      labels:
#        app: envoy
#    spec:
#      containers:
#        - name: envoy
#          image: envoyproxy/envoy:v1.18.3
#          ports:
#            - containerPort: 9090
#          volumeMounts:
#            - name: envoy-config
#              mountPath: /etc/envoy/envoy.yaml
#              subPath: envoy.yaml
#      volumes:
#        - name: envoy-config
#          configMap:
#            name: envoy-config

---
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 10080
      targetPort: 8080
  type: LoadBalancer
